overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -859,7 +859,7 @@ span {
     }
 
     #menu-icon {
-        right: 9rem;
+        right: 7rem;
     }
 
     #darkMode-icon {
